samples/_failures_safe/1761077448_a2b795_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d997829.c: In function ‘main’:
./samples/SAFE/__tmp_6d997829.c:184:16: error: expected declaration or statement at end of input
  184 |         struct Token token = get_next_token(input, &pos, line, &column);
      |                ^~~~~
./samples/SAFE/__tmp_6d997829.c:184:16: error: expected declaration or statement at end of input
